# generic-lib

./: .gitignore  .gitlab-ci.yml  README copy.md  README.md  pyproject.toml  requirements.txt  setup.cfg
api/: __init__.py  mail.py  settings.py  sms.py  storage.py  telegram.py  users.py
api/email/: __init__.py  sender.py
api/log/: dates.py  paths.py  reader.py  writer.py
api/payment/: __init__.py  schemas.py  stripe.py  striper.py  subscriptions.py  utils.py
api/sms/: sms.py
api/storage/: __init__.py  aws.py  client_user.py  local.py  restricted_users.py  server.py  utils.py
api/users/: __init__.py  restricted_backups.py  setup.py
console_scripts/: __init__.py  mailer.py  mismatch_files.py  project_setup.py  setup_project.py
data/: emails.txt  mail.txt
database_api/: __init__.py  alembic_migration_check.py  backup.py  git.py  operations.py  porting.py
gitlab/: housekeeping.yml  lint.yml
setup_project/: __init__.py
tests/: test_restricted_backups.py
