[metadata]
name = generic_lib
version = 4.7.0
author = GioVanni
author_email = colasanto.giovanni.inf@gmail.com


[options]
include_package_data = True
install_requires =
  SQLAlchemy
  alembic
  requests
  python-dotenv
  flask
  flask_cors
  schedule
  tqdm
  PyJWT
  boto3
  google-auth
  stripe
  python-telegram-bot
  pytz
packages = find:


[options.extras_require]
unix = psycopg2-binary
win = psycopg2


[options.entry_points]
console_scripts =
  db_export = console_scripts:db_export
  db_import = console_scripts:db_import
  setup_project = console_scripts:setup_project


[options.packages.find]
include =
  api
  api.users
  api.email
  api.payment
  api.storage
  database_api
  console_scripts
  setup_project


[options.package_data]
console_scripts = 
  template/alembic.ini
